# ---

./: .gitignore  README.md  _check_db.py
backend/: .env.example  alembic.ini  cli.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/alembic/: env.py
backend/app/api/: __init__.py  auth.py  diaries.py  tasks.py  videos.py
backend/app/models/: __init__.py  diary.py  scene.py  task_event.py  user.py  video_task.py
backend/app/schemas/: diary.py  user.py  video.py
backend/app/services/: auth_service.py  bgm.py  compositor.py  image_gen.py  pipeline.py  script_gen.py  tts.py
backend/app/utils/: exceptions.py  ffmpeg_utils.py  storage.py
backend/app/worker/: jobs.py  run_worker.py
data/bgm/: metadata.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/styles/: animations.css  main.css
frontend/src/components/common/: EmptyState.vue  LoadingSpinner.vue
frontend/src/components/layout/: AppFooter.vue  AppHeader.vue
frontend/src/composables/: useApi.js  useTaskPolling.js
frontend/src/pages/: DashboardPage.vue  DiaryDetailPage.vue  EditDiaryPage.vue  LandingPage.vue  LoginPage.vue  NewDiaryPage.vue  NotFoundPage.vue  RegisterPage.vue  SettingsPage.vue  TaskStatusPage.vue  VideoGalleryPage.vue  VideoPlayerPage.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
scripts/: setup_dev.ps1  start_backend.ps1  start_frontend.ps1  start_worker.ps1
