[project]
name = "diary2anime"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "dashscope>=1.22.0",
    "ffmpeg-python>=0.2.0",
    "arq>=0.26.0",
    "redis>=5.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "Pillow>=11.0.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
]
